fixing example display

--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -76,6 +76,10 @@
       },
       "outputs": [],
       "source": [
+        "%matplotlib inline\n",
+        "import pyvista as pv\n",
+        "pv.set_jupyter_backend('static')\n",
+        "\n",
         "from ansys.mapdl.core import launch_mapdl\n",
         "\n",
         "mapdl = launch_mapdl()"
