--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -76,10 +76,19 @@
       },
       "outputs": [],
       "source": [
+        "# Plotting settings\n",
         "%matplotlib inline\n",
         "import pyvista as pv\n",
-        "pv.set_jupyter_backend('static')\n",
-        "\n",
+        "pv.set_jupyter_backend('static')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Importing PyMAPDL\n",
         "from ansys.mapdl.core import launch_mapdl\n",
         "\n",
         "mapdl = launch_mapdl()"
