adding starting xvfb

--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -79,6 +79,8 @@
         "# Plotting settings\n",
         "%matplotlib inline\n",
         "import pyvista as pv\n",
+        "\n",
+        "pv.start_xvfb()\n",
         "pv.set_jupyter_backend('static')"
       ]
     },
