adding sphere plot

--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -77,11 +77,14 @@
       "outputs": [],
       "source": [
         "# Plotting settings\n",
-        "%matplotlib inline\n",
         "import pyvista as pv\n",
         "\n",
         "pv.start_xvfb()\n",
-        "pv.set_jupyter_backend('static')"
+        "pv.set_jupyter_backend('static')\n",
+        "\n",
+        "\n",
+        "sph = pv.Sphere()\n",
+        "sph.plot()"
       ]
     },
     {
