--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -82,19 +82,12 @@
    "source": [
     "# Plotting settings\n",
     "import pyvista as pv\n",
-    "\n",
-    "# pv.start_xvfb()\n",
-    "pv.set_jupyter_backend('trame')\n",
-    "pv.global_theme.trame.jupyter_extension_enabled = True\n",
-    "\n",
-    "\n",
-    "sph = pv.Sphere()\n",
-    "sph.plot()"
+    "pv.start_xvfb()  # To set xvfb display buffer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -205,9 +198,9 @@
     {
      "data": {
       "text/plain": [
-       "*** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  23.2     ***\n",
-       " Ansys Mechanical Enterprise                       \n",
-       " 00000000  VERSION=LINUX x64     09:47:58  JAN 19, 2024 CP=     14.369\n",
+       "*** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
+       " Ansys Mechanical Enterprise Academic Student      \n",
+       " 01055371  VERSION=LINUX x64     11:38:44  JAN 19, 2024 CP=      0.327\n",
        "\n",
        "                                                                               \n",
        "\n",
@@ -323,12 +316,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c90d1a439624e6f87c641a4d90b02b3",
+       "model_id": "ec261cd3392f44f3b97a6bc5ea9a83f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:56554/index.html?ui=P_0x281216290_1&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70c829feb0_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -374,12 +367,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89e49d02c4114ddba5da31147195ad65",
+       "model_id": "f4a802248e95465cb7c77b202a2d2883",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:56554/index.html?ui=P_0x284624d30_2&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70c02662c0_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -442,12 +435,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38479ae3d3d44e8b9f61fc191ad09310",
+       "model_id": "2217ca728e52427893a6ed9f2fbce0b5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:56554/index.html?ui=P_0x2846c3520_3&reconnect=auto\" class=\"pyvista…"
+       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70a6e29000_2&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1555,7 +1548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
