--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -187,33 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
-       " Ansys Mechanical Enterprise Academic Student      \n",
-       " 01055371  VERSION=LINUX x64     11:38:44  JAN 19, 2024 CP=      0.327\n",
-       "\n",
-       "                                                                               \n",
-       "\n",
-       "\n",
-       "\n",
-       "          ***** MAPDL ANALYSIS DEFINITION (PREP7) *****"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.prep7()"
    ]
@@ -230,25 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build your cubes\n",
     "mapdl.rectng(box1[0], box1[1], box1[2], box1[3])"
@@ -264,25 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.rectng(*box2)  # prints the id of the created area"
    ]
@@ -305,29 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec261cd3392f44f3b97a6bc5ea9a83f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70c829feb0_0&reconnect=auto\" class=\"pyvi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.aplot(cpos=\"xy\", show_lines=True)"
    ]
@@ -356,29 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a802248e95465cb7c77b202a2d2883",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70c02662c0_1&reconnect=auto\" class=\"pyvi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create first circle\n",
     "radius = 1\n",
@@ -401,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -424,29 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2217ca728e52427893a6ed9f2fbce0b5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:33439/index.html?ui=P_0x7f70a6e29000_2&reconnect=auto\" class=\"pyvi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.cyl4(circle2_X, circle2_Y, radius)\n",
     "mapdl.aplot(vtk=True, cpos=\"xy\", show_lines=True)"
@@ -468,25 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.aadd(\"all\")  # Prints the ID of the created area"
    ]
@@ -507,44 +410,27 @@
     "\n",
     "After selecting the line, you need to write it to a parameter so you can\n",
     "use it to generate the fillet line. This is done using the\n",
-    "[mapdl.get()](https://mapdl.docs.pyansys.com/version/0.67/api/_autosummary/ansys.mapdl.core.Mapdl.get_value.html#get-value) method.\n",
+    "[mapdl.get()](https://mapdl.docs.pyansys.com/version/0.67/api/_autosummary/ansys.mapdl.core.Mapdl.get.html#get) method.\n",
     "\n",
     "Because you have selected one line, you can use the `MAX` and `NUM`\n",
-    "arguments for the [mapdl.get()](https://mapdl.docs.pyansys.com/version/0.67/api/_autosummary/ansys.mapdl.core.Mapdl.get_value.html#get-value) method.\n",
+    "arguments for the [mapdl.get()](https://mapdl.docs.pyansys.com/version/0.67/api/_autosummary/ansys.mapdl.core.Mapdl.get.html#get) method.\n",
     "\n",
     "Select first line for fillet\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "ename": "MapdlCommandIgnoredError",
-     "evalue": "*** ERROR ***                           CP =      16.278   TIME= 09:48:00\n Unknown label in field 5 ( 0 ) of *GET command.                         \n  Line= *GET,__temp__,line1,LINE,0,NUM,MAX,,,,,                          \n  The *GET command is ignored.\n\nIgnore these messages by setting 'ignore_errors'=True",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMapdlCommandIgnoredError\u001b[0m                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m line1 \u001b[38;5;241m=\u001b[39m mapdl\u001b[38;5;241m.\u001b[39mlsel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLOC\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m, box1[\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m l1 \u001b[38;5;241m=\u001b[39m \u001b[43mmapdl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_value\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mline1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mLINE\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mNUM\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMAX\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/mapdl_extended.py:2727\u001b[0m, in \u001b[0;36m_MapdlExtended.get_value\u001b[0;34m(self, entity, entnum, item1, it1num, item2, it2num, item3, it3num, item4, it4num, **kwargs)\u001b[0m\n\u001b[1;32m   2634\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_value\u001b[39m(\n\u001b[1;32m   2635\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   2636\u001b[0m     entity: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2646\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: KwargDict,\n\u001b[1;32m   2647\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Union[\u001b[38;5;28mfloat\u001b[39m, \u001b[38;5;28mstr\u001b[39m]:\n\u001b[1;32m   2648\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Runs the MAPDL GET command and returns a Python value.\u001b[39;00m\n\u001b[1;32m   2649\u001b[0m \n\u001b[1;32m   2650\u001b[0m \u001b[38;5;124;03m    This method uses :func:`Mapdl.get`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2725\u001b[0m \u001b[38;5;124;03m    3003\u001b[39;00m\n\u001b[1;32m   2726\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 2727\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2728\u001b[0m \u001b[43m        \u001b[49m\u001b[43mentity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mentity\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2729\u001b[0m \u001b[43m        \u001b[49m\u001b[43mentnum\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mentnum\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2730\u001b[0m \u001b[43m        \u001b[49m\u001b[43mitem1\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mitem1\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2731\u001b[0m \u001b[43m        \u001b[49m\u001b[43mit1num\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mit1num\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2732\u001b[0m \u001b[43m        \u001b[49m\u001b[43mitem2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mitem2\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2733\u001b[0m \u001b[43m        \u001b[49m\u001b[43mit2num\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mit2num\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2734\u001b[0m \u001b[43m        \u001b[49m\u001b[43mitem3\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mitem3\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2735\u001b[0m \u001b[43m        \u001b[49m\u001b[43mit3num\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mit3num\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2736\u001b[0m \u001b[43m        \u001b[49m\u001b[43mitem4\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mitem4\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2737\u001b[0m \u001b[43m        \u001b[49m\u001b[43mit4num\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mit4num\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2738\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2739\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/errors.py:286\u001b[0m, in \u001b[0;36mprotect_grpc.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[38;5;66;03m# Capture gRPC exceptions\u001b[39;00m\n\u001b[1;32m    285\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 286\u001b[0m     out \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (_InactiveRpcError, _MultiThreadedRendezvous) \u001b[38;5;28;01mas\u001b[39;00m error:\n\u001b[1;32m    288\u001b[0m     \u001b[38;5;66;03m# can't use isinstance here due to circular imports\u001b[39;00m\n\u001b[1;32m    289\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/mapdl_grpc.py:2033\u001b[0m, in \u001b[0;36mMapdlGrpc._get\u001b[0;34m(self, entity, entnum, item1, it1num, item2, it2num, item3, it3num, item4, it4num, **kwargs)\u001b[0m\n\u001b[1;32m   2029\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_log\u001b[38;5;241m.\u001b[39mdebug(\n\u001b[1;32m   2030\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgrpc\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m get method seems to have failed. Trying old implementation for more verbose output.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2031\u001b[0m )\n\u001b[1;32m   2032\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 2033\u001b[0m     out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m*GET,__temp__,\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcmd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2034\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m MapdlRuntimeError:\n\u001b[1;32m   2035\u001b[0m     \u001b[38;5;66;03m# Get can thrown some errors, in that case, they are caught in the default run method.\u001b[39;00m\n\u001b[1;32m   2036\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/mapdl_core.py:2236\u001b[0m, in \u001b[0;36m_MapdlCore.run\u001b[0;34m(self, command, write_to_log, mute, **kwargs)\u001b[0m\n\u001b[1;32m   2233\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_response\n\u001b[1;32m   2235\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mignore_errors:\n\u001b[0;32m-> 2236\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_errors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2238\u001b[0m \u001b[38;5;66;03m# special returns for certain geometry commands\u001b[39;00m\n\u001b[1;32m   2239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m short_cmd \u001b[38;5;129;01min\u001b[39;00m PLOT_COMMANDS:\n",
-      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/mapdl_core.py:2686\u001b[0m, in \u001b[0;36m_MapdlCore._raise_errors\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m   2684\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcommand is ignored\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m flat_text:\n\u001b[1;32m   2685\u001b[0m     text \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m base_error_msg\n\u001b[0;32m-> 2686\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MapdlCommandIgnoredError(text)\n\u001b[1;32m   2688\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   2689\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe component definition of\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m flat_text\n\u001b[1;32m   2690\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontains no data.\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m flat_text\n\u001b[1;32m   2691\u001b[0m ):\n\u001b[1;32m   2692\u001b[0m     text \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m base_error_msg\n",
-      "\u001b[0;31mMapdlCommandIgnoredError\u001b[0m: *** ERROR ***                           CP =      16.278   TIME= 09:48:00\n Unknown label in field 5 ( 0 ) of *GET command.                         \n  Line= *GET,__temp__,line1,LINE,0,NUM,MAX,,,,,                          \n  The *GET command is ignored.\n\nIgnore these messages by setting 'ignore_errors'=True"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "line1 = mapdl.lsel(\"S\", \"LOC\", \"Y\", box1[2])\n",
-    "l1 = mapdl.get_value(\"line1\", \"LINE\", 0, \"NUM\", \"MAX\")"
+    "l1 = mapdl.get(\"line1\", \"LINE\", 0, \"NUM\", \"MAX\")"
    ]
   },
   {
@@ -570,7 +456,7 @@
    "outputs": [],
    "source": [
     "line2 = mapdl.lsel(\"S\", \"LOC\", \"X\", box2[0])\n",
-    "l2 = mapdl.get_value(\"line2\", \"LINE\", 0, \"NUM\", \"MAX\")"
+    "l2 = mapdl.get(\"line2\", \"LINE\", 0, \"NUM\", \"MAX\")"
    ]
   },
   {
